# python-practice

./: .gitignore  0.ipynb  1.py  README.md  b.html  diary_to_html.py
asset-api/: .env.local  .env.real  .gitignore  README.md  docker-compose.yml  free_pass_ips.json  prompt.txt  requirements.txt
asset-bat/: .gitignore  README.md  env.example  requirements.txt
asset-ifi/: README.md  docker-compose.yml
code-examples/: README.md  (+1 more)
eliana/: .env.example  .gitignore  1.html  ChartRequest.py  README.md  eliana.db  main.py  requirements.txt  run.sh  setup.cfg
eliana/assets/css/: style.css
eliana/assets/js/: chart-validation.js  common.js  eliana.js  test-data.js
eliana/doc/: 0315_prompt.md  0315_validation_prompt.md  1.html  2.html  3.html  assist.md  form-example.html  sample-list.html
eliana/src/: constants.py  logger.py  logger_config.py  main.py
eliana/src/exception/: exception_handler.py
eliana/src/model/: ChartRequest.py  __init__.py
eliana/src/routers/: bar.py  chart.py  form.py  line.py  sample.py
eliana/src/utils/: __init__.py  charts_util.py  db_utils.py  eliana_util.py  file_utils.py
eliana/templates/: index.html  main copy.html  main.html
eliana/templates/common/: error-404.html  footer.html  left-menu.html  meta-css.html  success.html  top-menu.html
eliana/templates/form/: bar.html  bar0.html  chart-aside.html  chart-main.html  line.html  linebar.html
eliana/templates/sample/: form.html  sample-form-edit.html  sample-form.html  sample-list.html
eliana/tests/: test_module1.py
eliana/tests/data/: bar.json  line.json  pie.json
(+1000 files in other folders)
