[metadata]
name = eliana
version = 0.1.0
description = A project to generate charts from JSON data using FastAPI and Matplotlib.
long_description = file: README.md
author = KimDoYoung
author_email = kdy987@gmail.com
license = MIT

[options]
package_dir=
    =src
packages = find:
install_requires =
    fastapi
    uvicorn
    matplotlib
    numpy

[options.packages.find]
where = src
